done with modal windows

--- a/src/index.css
+++ b/src/index.css
@@ -26,7 +26,7 @@ font-family: 'Poppins', sans-serif;
 
 @layer utilities {
     .container{
-        @apply xl:max-w-[1440px] md:w-[1080px] mx-auto
+        @apply xl:max-w-[1440px] lg:w-[1200px] md:w-[1080px] mx-auto 
     }
     .flex-flex{
         @apply flex items-center gap-4
@@ -108,3 +108,4 @@ a:disabled{
 /* .form-input{
     box-shadow: 1px 3px 8px gray;
 } */
+
