--- a/src/index.css
+++ b/src/index.css
@@ -53,7 +53,7 @@ font-family: 'Poppins', sans-serif;
         @apply  w-72 max-w-[20rem] text-base bg-stone-300 text-stone-700
     }
     .pagenation-btn{
-        @apply  py-3 px-6 flex items-center justify-center gap-x-4 border-none outline-none ring-2 ring-stone-300 rounded-md bg-stone-50 text-stone-700 cursor-pointer active:bg-yellow-800 active:text-yellow-50 active:ring-yellow-50  disabled:cursor-wait 
+        @apply  py-2 md:py-3 px-6 flex items-center justify-center gap-x-4 border-none outline-none ring-2 ring-stone-300 rounded-md bg-stone-50 text-stone-700 cursor-pointer active:bg-yellow-800 active:text-yellow-50 active:ring-yellow-50  disabled:cursor-wait 
     }
     .pagenation-btn:hover:not(:disabled){
         @apply bg-yellow-800 text-yellow-50
